// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomerLink renders a dash if customer name is undefined 1`] = `
<div>
  -
</div>
`;

exports[`CustomerLink renders a dash if customer name is undefined 2`] = `
<div>
  -
</div>
`;

exports[`CustomerLink renders a link to a customer with name and email 1`] = `
<div>
  <a
    data-link-type="wc-admin"
    href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions&search%5B0%5D=Some%20Name%20(some%40email.com)"
  >
    Some Name
  </a>
</div>
`;
